--- a/app.css
+++ b/app.css
@@ -1,4 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: large;
     background-color: rgb(255, 115, 0);
 }
