--- a/app.css
+++ b/app.css
@@ -1,5 +1,5 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: large;
-    background-color: rgb(255, 115, 0);
+    background-color: rgba(255, 115, 0, 0.192);
 }
