--- a/app.css
+++ b/app.css
@@ -3,3 +3,7 @@ body {
     font-size: large;
     background-color: rgba(255, 115, 0, 0.192);
 }
+
+/* brug selectors */
+/* få lavet et grid layout */
+/* find et farve tema */
